# rlog2

./: .gitignore  .nojekyll  Makefile  README.md  _quarto.yml  about.html  about.qmd  bootstrap  hello.py  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
posts/: 2020-12-22-understanding-what-makes-rl-difficult.html  2020-12-22-understanding-what-makes-rl-difficult.ipynb  2021-12-18-jax-brax-haiku.html  2021-12-18-jax-brax-haiku.ipynb  2022-03-07-sandb-exercise-racetrack.html  2022-03-07-sandb-exercise-racetrack.ipynb  _metadata.yml  fast_2d_physics_in_jax.html  fast_2d_physics_in_jax.ipynb  fast_2d_physics_in_jax_en.html  fast_2d_physics_in_jax_en.ipynb  jax-brax-haiku.html  jax-brax-haiku.ipynb  python_basic_en.html  python_basic_en.ipynb  python_basic_en.out.ipynb  sandb-exercise-racetrack.html  sandb-exercise-racetrack.ipynb  try_equinox_for_rl_en.html  try_equinox_for_rl_en.ipynb  try_equinox_for_rl_jp.html  try_equinox_for_rl_jp.ipynb  try_gemma3_rlhf-en.html  try_gemma3_rlhf-en.ipynb  try_gemma3_rlhf.html  try_gemma3_rlhf.ipynb  try_nwb_and_dandi.html  try_nwb_and_dandi.ipynb  understanding-attention-en.html  understanding-attention-en.ipynb  understanding-attention.html  understanding-attention.ipynb  understanding-transformer.html  understanding-transformer.ipynb  understanding-what-makes-rl-difficult.html  understanding-what-makes-rl-difficult.ipynb
posts/post-with-code/: index.html
posts/welcome/: index.html
requirements/: cpu.in  cuda12.in  jupyter.in  jupyter.txt  nwb.in
